--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
         "noUnusedParameters": true,
         "lib": ["DOM", "DOM.Iterable", "ESNext"],
         "target": "es2019",
-        "outDir": "dist",
+        "outFile": "./dist/index.user.js",
         "moduleResolution": "node",
         "noErrorTruncation": true,
         "skipLibCheck": true,
