--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "uglify": "uglifyjs dist/index.user.js --compress --mangle -o dist/index.min.user.js",
     "build": "npm run clean && tsc && npm run uglify && npm run headers && npm run readme",
     "headers": "bash ./scripts/headers.sh",
-    "readme": "generate-readme"
+    "readme": "generate-readme",
+    "postversion": "npm run build && git commit --all --amend --no-edit"
   },
   "devDependencies": {
     "@userscripters/generate-headers": "^1.6.4",
